# connectome-gnn-suite

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_SUMMARY.md  PROJECT_CHARTER.md  README.md  RESEARCH_ENHANCEMENT_SUMMARY.md  RESEARCH_PUBLICATION_READY.md  SECURITY.md  SETUP_REQUIRED.md  TERRAGON_AUTONOMOUS_EXECUTION_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_EXECUTION_COMPLETE_V4.md  TERRAGON_AUTONOMOUS_SDLC_v4_EXECUTION_COMPLETE_FINAL.md  TERRAGON_ENHANCED_AUTONOMOUS_EXECUTION_COMPLETE_V5.md  TERRAGON_ENHANCED_EXECUTION_SUMMARY.md  TERRAGON_EXECUTION_COMPLETE.md  TERRAGON_RESEARCH_ENHANCEMENT_COMPLETE.md  TESTING.md  comprehensive_quality_test.py  comprehensive_test.py  demo_basic_functionality.py  deployment_guide.md  docker-compose.yml  health-check-report.json  performance_optimization_demo.py  production_deployment_test.py  (+24 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.quality_gates/: latest.json  results_2025-08-16T19-09-41.900015.json  results_2025-08-16T19-10-11.981801.json
.terragon/: config.yaml  project-metrics.json  value-metrics.json
connectome_gnn/: __init__.py  adaptive_learning.py  advanced_training.py  autonomous_workflow.py  caching.py  cli.py  data.py  graph.py  models.py  optimization.py  progressive_gates.py  security.py  synthetic.py  terragon_orchestrator.py  train.py  training.py  utils.py  validation.py
connectome_gnn/autonomous/: __init__.py  enhanced_orchestrator.py  quantum_resilience.py  self_healing.py
connectome_gnn/benchmarks/: __init__.py  subject_benchmark.py
connectome_gnn/core/: __init__.py  base_types.py  utils.py
connectome_gnn/deployment/: __init__.py  config_management.py
connectome_gnn/global/: __init__.py  compliance.py  i18n.py  regional.py
connectome_gnn/global_deployment/: __init__.py  multi_region.py
connectome_gnn/optimization/: __init__.py  adaptive_optimization.py  distributed.py  edge_computing.py  inference.py  memory_efficient.py
connectome_gnn/production/: __init__.py  deployment_orchestrator.py
connectome_gnn/quality_gates/: __init__.py  comprehensive_testing.py
connectome_gnn/research/: __init__.py  advanced_benchmarking.py  advanced_validation.py  advanced_visualization.py  benchmark_suite.py  benchmarking.py  experimental.py  interpretability.py  meta_learning_gnn.py  neuromorphic_gnn.py  novel_architectures.py  publication.py  quantum_gnn.py  quantum_neuromorphic_fusion.py  statistical_validation.py
connectome_gnn/research_v2/: __init__.py  novel_architectures.py
connectome_gnn/research_v3/: __init__.py  adaptive_hierarchy.py  attention_bridge.py  meta_learning_gnn.py  neuromorphic_fusion.py  quantum_enhanced_gnn.py
connectome_gnn/robust/: __init__.py  adaptive_validation.py  advanced_error_recovery.py  error_handling.py  logging_config.py  quantum_security.py  security.py  validation.py
connectome_gnn/scale/: __init__.py  caching.py  extreme_performance.py  memory_optimization.py  performance_monitoring.py  quantum_acceleration.py
connectome_gnn/scaling/: __init__.py  distributed_quantum_orchestration.py  distributed_training.py
connectome_gnn/security/: __init__.py  advanced_security.py  zero_trust_architecture.py
connectome_gnn/tasks/: __init__.py  (+4 more)
docs/: DEVELOPMENT.md  RESEARCH_FRAMEWORK.md  ROADMAP.md
examples/: demo.py
monitoring/: alert_rules.yml  prometheus.yml
research_demo_results/: architecture_concepts.json  comprehensive_research_report.md  performance_results.json  research_summary.json  statistical_analysis.json
research_validation_results/: RESEARCH_VALIDATION_SUMMARY.md  architecture_benchmarks.json  research_concepts.json  research_validation_summary.json  scientific_contributions.json
scripts/: build.sh  docker-compose-dev.sh
terragon_env_active/: pyvenv.cfg
terragon_env_current/: pyvenv.cfg
terragon_env_fresh/: pyvenv.cfg
terragon_env_new/: pyvenv.cfg
terragon_env_v5/: pyvenv.cfg
terragon_execution_env/: pyvenv.cfg
terragon_working/: pyvenv.cfg
tests/: __init__.py  conftest.py  test_data.py  test_graph.py  test_imports.py  test_models.py  test_performance.py  test_security.py  test_synthetic.py  test_tasks.py  test_training.py
(+94 files in other folders)
