[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connectome-gnn-suite"
version = "0.1.0"
description = "Graph Neural Networks for Human Brain Connectivity Analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@example.com"}
]
maintainers = [
    {name = "Daniel Schmidt", email = "daniel@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["neuroscience", "graph-neural-networks", "connectome", "brain"]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "nibabel>=3.2.0",
    "networkx>=2.6.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "ipywidgets>=7.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "notebook>=6.4.0",
]
full = [
    "connectome-gnn-suite[viz,dev]",
]

[project.scripts]
cgnn-train = "connectome_gnn.cli:train"
cgnn-eval = "connectome_gnn.cli:evaluate"
cgnn-preprocess = "connectome_gnn.cli:preprocess"
cgnn-visualize = "connectome_gnn.cli:visualize"

[project.urls]
Homepage = "https://github.com/yourusername/connectome-gnn-suite"
Documentation = "https://connectome-gnn-suite.readthedocs.io"
Repository = "https://github.com/yourusername/connectome-gnn-suite"
"Bug Tracker" = "https://github.com/yourusername/connectome-gnn-suite/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["connectome_gnn*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=connectome_gnn --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
severity = "medium"

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:F401,F811,S101"
]

[tool.coverage.run]
source = ["connectome_gnn"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.pre-commit]
repos = [
    {repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.4.0"},
    {repo = "https://github.com/psf/black", rev = "22.10.0"},
    {repo = "https://github.com/pycqa/isort", rev = "5.11.4"},
    {repo = "https://github.com/pycqa/flake8", rev = "6.0.0"},
    {repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v0.991"},
]