[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "connectome-gnn-suite"
version = "0.2.0"
description = "Graph neural networks for brain connectome analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Schmidt", email = "danschmidt88@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["connectome_gnn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
